<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CadastroActivity">

    <ImageView
            android:layout_width="119dp"
            android:layout_height="121dp"
            android:id="@+id/octocatMask"
            android:background="@mipmap/ic_launcher_round"
            tools:layout_editor_absoluteY="47dp"
            tools:layout_editor_absoluteX="146dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
       >

    </ImageView>

    <TextView
            android:id="@+id/txt_nomeApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.266"
            app:layout_constraintHorizontal_bias="0.496"/>

    <TextView
            android:id="@+id/txt_cadastroUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/app_titulo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.319"
            app:layout_constraintHorizontal_bias="0.498"/>

    <TextView
            android:id="@+id/edt_cadastroNome"
            android:layout_width="263dp"
            android:layout_height="51dp"
            android:textSize="15sp"
            android:background="@color/gray"
            android:hint="@string/cadastro_nome"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.417"
    />
    <TextView
            android:id="@+id/edt_cadastroEmail"
            android:layout_width="263dp"
            android:layout_height="51dp"
            android:textSize="15sp"
            android:background="@color/gray"
            android:hint="@string/cadastro_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.511"
    />
    <TextView
            android:id="@+id/edt_cadastroIdade"
            android:layout_width="263dp"
            android:layout_height="51dp"
            android:textSize="15sp"
            android:background="@color/gray"
            android:hint="@string/cadastro_idade"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.808"
    />
    <TextView
            android:id="@+id/edt_cadastroSenha"
            android:layout_width="263dp"
            android:layout_height="51dp"
            android:textSize="15sp"
            android:background="@color/gray"
            android:hint="@string/cadastro_senha"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.611"
    />
    <TextView
            android:id="@+id/edt_cadastroBairro"
            android:layout_width="263dp"
            android:layout_height="51dp"
            android:textSize="15sp"
            android:background="@color/gray"
            android:hint="@string/cadastro_bairro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.71"
    />
    <Button
            android:layout_width="246dp"
            android:layout_height="34dp"
            android:id="@+id/btn_commit"
            android:background="@color/primary"
            android:text="@string/commit"
            android:textColor="@color/white"
            tools:layout_editor_absoluteY="627dp"
            tools:layout_editor_absoluteX="82dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_cadastroBairro"
        />

</androidx.constraintlayout.widget.ConstraintLayout>