<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:layout_width="92dp"
            android:layout_height="93dp"
            android:id="@+id/octocatMask"
            android:background="@mipmap/ic_launcher_round"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/sintomas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_nomeApp"
            app:layout_constraintHorizontal_bias="0.83"
            app:layout_constraintVertical_bias="0.541">

    </ImageView>
    <TextView
            android:id="@+id/txt_nomeApp"
            android:layout_width="198dp"
            android:layout_height="35dp"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold"
            android:text="@string/app_name"
            tools:layout_editor_absoluteX="164dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="72dp"
        />

    <TextView
            android:id="@+id/diario_sintomas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/diario_sintomas"
            tools:layout_editor_absoluteY="107dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="40dp"
        />

    <TextView
            android:id="@+id/sintomas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryDark"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/sintomas"
            tools:layout_editor_absoluteY="206dp"
            app:layout_constraintEnd_toStartOf="@+id/edt_sintoma"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.442"/>
    <TextView
            android:id="@+id/termino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/data_termino"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/edt_dTermino"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintTop_toBottomOf="@+id/inicio"
            android:layout_marginTop="8dp"/>
    <TextView
            android:id="@+id/inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/data_inicio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/edt_dInicio"
            app:layout_constraintHorizontal_bias="0.548"
            app:layout_constraintTop_toBottomOf="@+id/intensidade"
            android:layout_marginTop="8dp"/>
    <TextView
            android:id="@+id/intensidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/intensidade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/edt_intensidade"
            app:layout_constraintTop_toBottomOf="@+id/sintomas"
            app:layout_constraintHorizontal_bias="0.492"
            android:layout_marginTop="4dp"/>
    <TextView
            android:id="@+id/edt_dTermino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:text="20/02/2021"
            tools:layout_editor_absoluteY="289dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="128dp"
            android:layout_marginRight="128dp"
        />
    <TextView
            android:id="@+id/edt_dInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:text="15/02/2021"
            tools:layout_editor_absoluteY="261dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="128dp"
             android:layout_marginRight="128dp" />
    <TextView
            android:id="@+id/edt_intensidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:text="moderada"
            tools:layout_editor_absoluteY="233dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="140dp"/>

    <TextView
            android:id="@+id/edt_sintoma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:textSize="15sp"
            tools:text="Tosse"
            tools:layout_editor_absoluteY="206dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="164dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>